infra/platform-system/envoy-gateway/config/referencegrant-external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: external-gateway
  namespace: platform-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: media
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: home-automation
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: web
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: platform-system
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
