infra/platform-system/envoy-gateway/config/service-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-internal
  namespace: platform-system
  labels:
    gatus.edgard.org/enabled: "true"
spec:
  selector:
    app.kubernetes.io/component: proxy
    gateway.envoyproxy.io/owning-gateway-name: internal
    gateway.envoyproxy.io/owning-gateway-namespace: platform-system
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
