infra/platform-system/envoy-gateway/config/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: platform-system
  labels:
    external-dns.edgard.org/scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.241
spec:
  gatewayClassName: envoy-gateway-internal
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.edgard.org"
    allowedRoutes:
      namespaces:
        from: All
  - name: http-root
    protocol: HTTP
    port: 80
    hostname: edgard.org
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.edgard.org"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: wildcard-edgard-org-tls
    allowedRoutes:
      namespaces:
        from: All
  - name: https-root
    protocol: HTTPS
    port: 443
    hostname: edgard.org
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: wildcard-edgard-org-tls
    allowedRoutes:
      namespaces:
        from: All
