infra/platform-system/envoy-gateway/config/global-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-http-redirect-external
  namespace: platform-system
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: platform-system
    sectionName: http
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: platform-system
    sectionName: http-root
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-http-redirect-internal
  namespace: platform-system
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: platform-system
    sectionName: http
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: platform-system
    sectionName: http-root
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
