infra/platform-system/envoy-gateway/config/traffic-policies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-gateway-backend
  namespace: platform-system
spec:
  compression:
  - type: Brotli
  - type: Gzip
  connection:
    bufferLimit: 64Mi
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
